<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AccountDetailsActivity">

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Date"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/merchantTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Merchant"
        android:textAlignment="viewStart"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Amount"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/transTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TransType"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        />

</LinearLayout>