<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountSelectionActivity">

    <TextView
        android:id="@+id/selectedAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#673AB7"
        android:padding="16dp"
        android:text="@string/select_account"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedAccountTextView"
        app:layout_constraintVertical_bias="0.1">

        <RadioButton
            android:id="@+id/personalRadioButton"
            android:layout_width="117dp"
            android:layout_height="match_parent"
            android:text="@string/personal_account"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/businessRadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/business_account"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/savingsRadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/savings_account"
            android:onClick="onRadioButtonClicked" />

        <!-- Add more RadioButtons for other account options as needed -->
    </RadioGroup>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="177dp"
        android:padding="16dp"
        android:text="@string/cancel_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirmButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="53dp"
        android:padding="16dp"
        android:text="@string/confirm_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cancelButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

</androidx.constraintlayout.widget.ConstraintLayout>
